[gd_scene load_steps=16 format=2]

[ext_resource path="res://buttons/btn.down.blue.01.png" type="Texture" id=1]
[ext_resource path="res://buttons/btn.up.blue.01.png" type="Texture" id=2]
[ext_resource path="res://buttons/btn.left.white.01.png" type="Texture" id=3]
[ext_resource path="res://buttons/btn.hop.white.01.png" type="Texture" id=4]
[ext_resource path="res://UI.gd" type="Script" id=5]
[ext_resource path="res://buttons/btn.right.white.01.png" type="Texture" id=6]
[ext_resource path="res://buttons/btn.hop.blue.01.png" type="Texture" id=7]
[ext_resource path="res://buttons/btn.down.white.01.png" type="Texture" id=8]
[ext_resource path="res://buttons/btn.left.blue.01.png" type="Texture" id=9]
[ext_resource path="res://buttons/btn.up.white.01.png" type="Texture" id=10]
[ext_resource path="res://buttons/btn.right.blue.01.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 175, 150 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 175, 150 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 175, 150 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 175, 150 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="LeftScreen" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -600.0
margin_right = 1024.0

[node name="JumpButton" type="TouchScreenButton" parent="LeftScreen"]
position = Vector2( 3, 438 )
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 7 )
pressed = ExtResource( 4 )

[node name="RightScreen" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -600.0

[node name="UpButton" type="TouchScreenButton" parent="RightScreen"]
position = Vector2( 810, 303 )
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 2 )
pressed = ExtResource( 10 )
shape = SubResource( 1 )

[node name="DownButton" type="TouchScreenButton" parent="RightScreen"]
position = Vector2( 809, 471 )
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 1 )
pressed = ExtResource( 8 )
shape = SubResource( 2 )

[node name="LeftButton" type="TouchScreenButton" parent="RightScreen"]
position = Vector2( 728, 385 )
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 9 )
pressed = ExtResource( 3 )
shape = SubResource( 3 )

[node name="RightButton" type="TouchScreenButton" parent="RightScreen"]
position = Vector2( 895, 385 )
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 11 )
pressed = ExtResource( 6 )
shape = SubResource( 4 )
